Added startup objects and defect

--- a/ExampleConsoleApp/ExampleConsoleApp.csproj
+++ b/ExampleConsoleApp/ExampleConsoleApp.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>StartupCardIssuer</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Examples\Examples.csproj" />
+  </ItemGroup>
 
 </Project>
