--- a/ExampleTests/ExampleTests.csproj
+++ b/ExampleTests/ExampleTests.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ExampleConsoleApp\ExampleConsoleApp.csproj" />
     <ProjectReference Include="..\Examples\Examples.csproj" />
   </ItemGroup>
 
